<resources>
    <string name="app_name">To_do_app</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="add_label">Add Database Item</string>
    <string name="edit_label">Edit Database Item</string>
    <string name="delete_label">Remove Database Item</string>
    <string name="help_string">Help text goes here</string>
    <string name="insert_title">My Tasks</string>
    <string name="insert_name_label">Task</string>
    <string name="insert_price_label">Date</string>
    <string name="back_button_label">Go Back</string>
    <string name="add_button_label">Add New Task</string>
    <string name="update_button_label">Update Item</string>
    <string name="name_hint">Enter to-do tasks</string>
    <string name="price_hint">Enter the deadline for the task</string>
    <string name="empty_database_str">The database is currently empty</string>
</resources>